--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   </head>
   <body>
     <nav class="Navbar" id="navbar"></nav>
+    <div id="book_details"></div>
     <div id="content_show_here"></div>
     <div id="pagination"></div>
   </body>
